--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,11 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2020",
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "esnext.bigint"
     ]
   },
   "angularCompilerOptions": {
